# flagme

./: .gitignore  CLAUDE.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  FlagForm.tsx  FlagsTable.tsx  api.ts  index.css  types.ts
src/flagme/: __main__.py  api.py  models.py  storage.py
tests/: conftest.py  test_api.py  test_smoke.py
