[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flagme"
version = "0.0.1"
description = "Feature flag service"
requires-python = ">=3.12"
authors = [
    { name = "Diego Reyes", email = "dreyes@augursecurity.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
flagme = "flagme.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flagme"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]